# books_drf

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: qa.yml
api/: settings.py
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_author_slug_alter_book_slug.py  0003_alter_book_authors.py
