[tool.poetry]
name = "books-drf"
version = "0.1.0"
description = ""
authors = ["Yauheni_Liubimov <0.5TELOO@gmail.com>"]
readme = "README.md"
packages = [{include = "books_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
